[package]
name = "flux-cache"
version = "1.0.0"
edition = "2024"
description = "A scalable and extensible caching software written in Rust"
default-run = "flux-cache"

[dependencies]
tokio = { version = "1.45.0", features = ["full"] }
zstd = "0.13"
rand = "0.8"
bytes = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4"] }
sysinfo = "0.30"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
socket2 = "0.5.5"
toml = "0.8.22"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = false
strip = true

[alias]
run = "run --release"
